--- a/main.html
+++ b/main.html
@@ -8,7 +8,30 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>Happy Day</h1>
+	<br/>
+	<p>Kodaikanal is a hill town in the southern Indian state of Tamil Nadu. It’s set in an area of granite cliffs, forested valleys, lakes, waterfalls and grassy hills. At 2,000 meters above sea level, the town centers around man-made, star-shaped Kodaikanal Lake, bordered by evergreen forest. Rowing boats can be hired, and hikers and cyclists follow the 5k Lake Road path around the shore</p>
+    <ol type="1"> 
+		attractions
+		<b>
+		<li>hice place1</li>
+		<li>hice place2</li>
+		<li>hice place3</li>
+		<li>hice place4</li>
+		<li>hice place5</li>
+		</b>
+	</ol>
+    <ul> 
+		 must-try foods
+		<i>
+		<li>hice 1</li>
+		<li>hice 2</li>
+		<li>hice 3</li>
+		<li>hice 4</li>
+		<li>hice 5</li>
+		</i>
+	</ul>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
